# Catch2_Test_Git_CI

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  src.cpp
.github/workflows/: cmake.yml
cmakepresets/: vcpkg.json
scripts/: download-dep.sh
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test.cpp
